# gecco

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  standardize_data.py
config/: decision_making.yaml  decision_making_openmodels.yaml  schema.py  two_step.yaml
core/: data_structures.py  fitting.py
data/: data2text.py  io.py  rlwm.csv
engine/: feedback.py  model_search.py  run_fit.py
examples/: decision_making_demo.py  two_step_demo.py
examples/results/bics/: iter0.json  iter1.json
examples/results/models/: best_model.py  iter0.py
gecco/: __init__.py  run_gecco.py  utils.py
gecco/construct_feedback/: __init__.py  feedback.py
gecco/load_llms/: __init__.py  model_loader.py  qwen_backend.py
gecco/offline_evaluation/: __init__.py  evaluation_functions.py  fit_generated_models.py  utils.py
gecco/prepare_data/: __init__.py  data2text.py  io.py
gecco/prompt_builder/: __init__.py  guardrails.py  prompt.py
llm/: generator.py  guardrails.py  model_loader.py  prompt_builder.py
llm/backends/: gpt_backend.py  llama_backend.py  r1_backend.py
results/multi_attribute_decision_making/bics/: iter0.json  iter0_run0.json  iter1.json  iter2.json  iter3.json  iter4.json
results/multi_attribute_decision_making/models/: best_model.py  best_model_0.py  iter0.py  iter0_run0.py  iter1.py  iter1_run0.py  iter2.py  iter3.py  iter4.py
results/two_step_task/bics/: iter0.json  iter1.json  iter2.json  iter3.json  iter4.json
results/two_step_task/models/: best_model.py  (+5 more)
scripts/: decision_making_demo.py  two_step_demo.py
utils/: extraction.py
(+12 files in other folders)
