[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gecco"
version = "0.1.0"
description = "Generalized Cognitive Model Generator"
authors = [{ name = "Milena Rmus" }]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["gecco*", "config*", "core*", "data*", "llm*", "utils*"]
exclude = ["newenv*"]
